@@ -1,3 +1,0 @@
-
-Linux/Alpha needs no special treatment at present.
-
