@@ -1,15 +1,0 @@
-#!/bin/sh
-
-for regname in \
-	 \$0   \$1   \$2   \$3   \$4   \$5   \$6   \$7 		\
-	 \$8   \$9   \$10  \$11  \$12  \$13  \$14      		\
-	 \$16  \$17  \$18  \$19  \$20  \$21  \$22  \$23		\
-	 \$24  \$25              \$28             		\
-	 \$f0  \$f1  \$f2  \$f3  \$f4  \$f5  \$f6  \$f7		\
-	 \$f8  \$f9  \$f10 \$f11 \$f12 \$f13 \$f14 \$f15	\
-	 \$f16 \$f17 \$f18 \$f19 \$f20 \$f21 \$f22 \$f23	\
-	 \$f24 \$f25 \$f26 \$f27 \$f28 \$f29 \$f30
-do
-    ./doregtest "$regname"
-done
-
